# src/docs/swagger.json
@@ -940,6 +940,62 @@
                 }
             }
         },
+        "/users/signature": {
+            "post": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Sign up user to API",
+                "description": "This route will be responsible to the user get a public API KEY",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Signature"
+                            },
+                            "examples": {
+                                "signature": {
+                                    "value": {
+                                      
+                                        "email": "jhonhdoe@test.com"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "500": {
+                        "description": "Sorry, Internal Server Error!"
+                    },
+                    "400": {
+                        "description": " Bad Request!"
+                    },
+                    "401": {
+                        "description": "Unauthorized!"
+                    },
+                    "403": {
+                        "description": "Forbidden!"
+                    },
+                    "404": {
+                        "description": "Not Found!"
+                    },
+                    "409": {
+                        "description": "Conflit!"
+                    },
+                    "201": {
+                        "description": "Created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/users/login": {
             "post": {
                 "tags": [
@@ -1932,6 +1988,14 @@
                     },
                     "status": {
                         "type": "boolean"
+                    }
+                }
+            },
+            "Signature": {
+                "type": "object",
+                "properties": {
+                    "email": {
+                        "type": "string"
                     }
                 }
             }
